tdf#112559 sc: Expose font height via the Defaults UNO API

This fixes both ODF import and export of the default cell style.

Change-Id: I776591c6ed932a136b95107d3c4a0f25c1bebdf1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/110539
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>